💄 Fix submit button vertical alignment on mobile
Why:
- PureCSS has the following property which adds top margin to submit
  buttons on mobile. It doesn't add a margin to other buttons. On forms
  like the assign territory form, we have submit and cancel buttons side
  by side. This led to them being misaligned on mobile.

@media only screen and (max-width : 480px) {
    .pure-form button[type=submit] {
        margin:.7em 0 0
    }
}

--- a/web/src/layout/Layout.module.css
+++ b/web/src/layout/Layout.module.css
@@ -39,6 +39,11 @@ kbd {
     outline-offset: 2px;
 }
 
+:global .pure-form button[type=submit] {
+    /* PureCSS adds top margin to submit buttons on mobile, which misaligns it with the cancel button next to it */
+    margin-top: 0;
+}
+
 /* layout */
 
 .navbar {
